<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_encouraging_word">격려 한마디</string>
    <string name="edit">편집</string>
    <string name="remove">제거</string>
    <string name="close">닫기</string>
    <string name="save">저장</string>
    <string name="regenerate">다시 생성</string>
    <string name="encourage_list_empty_message">저장된 격려 한마디 목록이 없습니다</string>
    <string name="encourage_list_error_message">격려 한마디 목록을 불러올 수 없습니다</string>
    <string name="encourage_dialog_error_message">문장 생성에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="generate">생성하기</string>
</resources>