<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewEncourageDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/buttonEncourageDialogClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="주식은 장기투자가 답이에요!" />

    <ProgressBar
        android:id="@+id/progressBarEncourageDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:indeterminateTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/buttonEncourageDialogClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEncourageDialogClose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/red"
        android:text="@string/close"
        app:layout_constraintBottom_toTopOf="@id/buttonEncourageDialogGenerate"
        app:layout_constraintEnd_toStartOf="@id/buttonEncourageDialogSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEncourageDialog" />

    <Button
        android:id="@+id/buttonEncourageDialogSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/selector_blue_button"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@id/buttonEncourageDialogClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonEncourageDialogClose"
        app:layout_constraintTop_toTopOf="@id/buttonEncourageDialogClose" />

    <Button
        android:id="@+id/buttonEncourageDialogGenerate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/selector_black_button"
        android:text="@string/regenerate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonEncourageDialogClose" />

</androidx.constraintlayout.widget.ConstraintLayout>